--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ hyperframe==5.2.0
 idna==2.10
 inflection==0.5.1
 ipykernel==6.29.2
-ipython==8.21.0
+ipython
 itypes==1.2.0
 jedi==0.19.1
 Jinja2==3.1.3
