--- a/requirements.txt
+++ b/requirements.txt
@@ -105,6 +105,7 @@ pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
 pyparsing==3.1.1
+Python==3.12.0
 python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.1
